--- a/src/nunjucks/templates/partials/header.html
+++ b/src/nunjucks/templates/partials/header.html
@@ -5,18 +5,11 @@
   </div>
   <div class="header-block--desktop-nav">
     <nav>
-      <div class="nav-item">
-        <a href="#">About</a>
-      </div>
-      {# <div class="nav-item">
-        <a href="#">Advertise</a>
-      </div> #}
-      <div class="nav-item">
-        <a href="#">Shop</a>
-      </div>
-      {# <div class="nav-item">
-        <a href="#">the DONUT Chronicles</a>
-      </div> #}
+      {% for item in header_nav_items %}
+        <div class="nav-item">
+          <a href="{{ item.href }}" title="{{ item.title }}">{{ item.title }}</a>
+        </div>
+      {% endfor %}
     </nav>
   </div>
   <div id="hamburger">
@@ -26,10 +19,10 @@
   </div>
   <div class="mobile-nav-wrapper">
     <nav id="mobile-menu">	
-      <a href="#">About</a>
-      <a href="#">Advertise</a>
-      <a href="#">Shop</a>
-      <a href="#">the DONUT Chronicles</a>
+      <a href="/" title="Home">Home</a>
+      {% for item in header_nav_items %}
+        <a href="{{ item.href }}" title="{{ item.title }}">{{ item.title }}</a>
+      {% endfor %}
     </nav>
   </div>
 </header>
