Finalized homepage reworking of markup and styles

--- a/src/nunjucks/templates/partials/footer-subscribe.html
+++ b/src/nunjucks/templates/partials/footer-subscribe.html
@@ -3,11 +3,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col white-text">
-				<h1>{{ page_content.subscribe.h1 }}</h1>
-				<p class="large">{{ page_content.subscribe.sub }}</p>
+				<h1 class="large headline">Let's make it official...</h1>
+				<p class="large">You spent all this time learning about the DONUT, so you might as well join in. Get free, fact-only news today!</p>
 				<div class="form-wrapper">
-					
-					<form id="subForm" class="js-cm-form with-shadow" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="2BE4EF332AA2E32596E38B640E905619D46C578C13DDFF6441C6635407B1C0360BB5CEF4218B8BC89D7C6A17877B09FDE6B1E1C65BFD365D419599279E726665">   
+
+					<form id="subForm" class="single-input-form with-shadow js-cm-form" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="2BE4EF332AA2E32596E38B640E905619D46C578C13DDFF6441C6635407B1C0360BB5CEF4218B8BC89D7C6A17877B09FDE6B1E1C65BFD365D419599279E726665">
 						<div class="form-content">
 							<div class="field-wrapper">
 								<!-- <label for="fieldEmail">Email</label> -->
@@ -16,7 +16,7 @@
 								<input id="fieldykqhyi" name="cm-f-ykqhyi" type="hidden" /> <!-- Custom field input for capturing UTM Campaign -->
 								<input id="fieldykfdjl" name="cm-f-ykfdjl" type="hidden" /> <!-- Custom field for referral URL if UTM values are null -->
 							</div>
-							
+
 							<div class="button-wrapper">
 								<button class="js-cm-submit-button black" type="submit">Subscribe</button>
 							</div>
