--- a/src/scss/partials/_ambassadors.scss
+++ b/src/scss/partials/_ambassadors.scss
@@ -5,32 +5,36 @@
 .ambassador-wrapper {
   display: flex;
   min-height: 100vh;
-  @media screen and (max-width: $mq-max-lg) {
+
+  @include breakpoint('lg') {
     flex-direction: column;
   }
 }
 
 .ambassador-signup-container {
-  background: linear-gradient(45deg, rgba($periwinkle, .93), rgba($pink, .93)), url('http://localhost:3000/images/donut-newsletter-mockup.jpg');
+  background: linear-gradient(45deg, rgba($periwinkle, 0.93), rgba($pink, 0.93)),
+    url('http://localhost:3000/images/donut-newsletter-mockup.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   flex: 1 auto;
   padding: 60px 15px;
+
   .inner {
     max-width: 480px;
     text-align: center;
   }
+
   h1 {
     max-width: 390px;
     margin: 0 auto 20px;
   }
+
   p.medium {
     margin-bottom: 50px;
   }
   form {
     margin-bottom: 30px;
-    
   }
 }
 
@@ -43,7 +47,6 @@
     display: block;
     margin: auto;
     margin-bottom: 40px;
-    
   }
   h4 {
     font-size: 18px;
@@ -51,10 +54,10 @@
       color: $green;
       margin: 0 3px;
       &:nth-of-type(2) {
-        color: $yellow;
+        color: $schoolbus;
       }
       &:nth-of-type(3) {
-        color: $lightblue;
+        color: $sky;
       }
       &:nth-of-type(4) {
         color: $pink;
