--- a/src/scss/partials/_welcome.scss
+++ b/src/scss/partials/_welcome.scss
@@ -4,11 +4,11 @@
 .welcome-container {
   padding-top: 160px;
   padding-bottom: 150px;
-  @media screen and (max-width: $mq-max-sm) {
+  @include breakpoint('sm') {
     padding-top: 130px;
     padding-bottom: 100px;
   }
-  
+
   .inner {
     max-width: 540px;
     margin: auto;
@@ -23,7 +23,7 @@
   @include clearfix;
   margin-top: 60px;
   display: flex;
-  @media screen and (max-width: $mq-max-sm) {
+  @include breakpoint('sm') {
     flex-direction: column;
     justify-content: center;
   }
@@ -31,7 +31,7 @@
     margin-left: -5px;
     margin-right: -5px;
     margin-top: 48px;
-    @media screen and (max-width: $mq-max-sm) {
+    @include breakpoint('sm') {
       margin-top: 30px;
       margin-bottom: 30px;
       justify-content: center;
@@ -50,14 +50,12 @@
     @media screen and (min-width: $mq-min-sm) {
       margin-right: 15px;
     }
-    
-    
   }
   .tshirt {
     max-width: 160px;
     flex: 1 0 auto;
     align-self: flex-start;
-    @media screen and (max-width: $mq-max-sm) {
+    @include breakpoint('sm') {
       align-self: center;
     }
   }
@@ -65,13 +63,11 @@
     position: absolute;
     right: 0;
     bottom: 40px;
-    @media screen and (max-width: $mq-max-sm) {
+    @include breakpoint('sm') {
       display: none;
     }
   }
 }
-
-
 
 $particles: 50;
 $width: 500;
@@ -82,96 +78,110 @@ $box-shadow: ();
 $box-shadow2: ();
 @for $i from 0 through $particles {
   $box-shadow: $box-shadow,
-               random($width)-$width / 2 + px
-               random($height)-$height / 1.2 + px
-               hsl(random(360), 100, 50);
-  $box-shadow2: $box-shadow2, 0 0 #fff
+    random($width)-$width /
+      2 +
+      px
+      random($height)-$height /
+      1.2 +
+      px
+      hsl(random(360), 100, 50);
+  $box-shadow2: $box-shadow2, 0 0 #fff;
 }
-@mixin keyframes ($animationName) {
-    @-webkit-keyframes #{$animationName} {
-        @content;
-    }
+@mixin keyframes($animationName) {
+  @-webkit-keyframes #{$animationName} {
+    @content;
+  }
 
-    @-moz-keyframes #{$animationName} {
-        @content;
-    }
+  @-moz-keyframes #{$animationName} {
+    @content;
+  }
 
-    @-o-keyframes #{$animationName} {
-        @content;
-    }
+  @-o-keyframes #{$animationName} {
+    @content;
+  }
 
-    @-ms-keyframes #{$animationName} {
-        @content;
-    }
+  @-ms-keyframes #{$animationName} {
+    @content;
+  }
 
-    @keyframes #{$animationName} {
-        @content;
-    }
-}
-
-@mixin animation-delay ($settings) {
-    animation-delay: $settings;
-}
-
-@mixin animation-duration ($settings) {
-    animation-duration: $settings;
+  @keyframes #{$animationName} {
+    @content;
+  }
 }
 
-@mixin animation ($settings) {
-    animation: $settings;
+@mixin animation-delay($settings) {
+  animation-delay: $settings;
 }
 
-@mixin transform ($settings) {
-    transform: $settings;
+@mixin animation-duration($settings) {
+  animation-duration: $settings;
 }
 
+@mixin animation($settings) {
+  animation: $settings;
+}
 
+@mixin transform($settings) {
+  transform: $settings;
+}
 
-.pyro > .before, .pyro > .after {
+.pyro > .before,
+.pyro > .after {
   position: absolute;
   width: 5px;
   height: 5px;
   border-radius: 50%;
   box-shadow: $box-shadow2;
-  @include animation((1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards));
+  @include animation(
+    (
+      1s bang ease-out infinite backwards,
+      1s gravity ease-in infinite backwards,
+      5s position linear infinite backwards
+    )
+  );
 }
-    
+
 .pyro > .after {
   @include animation-delay((1.25s, 1.25s, 1.25s));
   @include animation-duration((1.25s, 1.25s, 6.25s));
 }
-        
+
 @include keyframes(bang) {
   to {
-    box-shadow:$box-shadow;
+    box-shadow: $box-shadow;
   }
 }
-    
-@include keyframes(gravity)  {
+
+@include keyframes(gravity) {
   to {
     @include transform(translateY(200px));
     opacity: 0;
   }
 }
-    
+
 @include keyframes(position) {
-  0%, 19.9% {
+  0%,
+  19.9% {
     margin-top: 10%;
     margin-left: 40%;
   }
-  20%, 39.9% {
+  20%,
+  39.9% {
     margin-top: 40%;
     margin-left: 30%;
   }
-  40%, 59.9% {  
+  40%,
+  59.9% {
     margin-top: 20%;
-    margin-left: 70%
+    margin-left: 70%;
   }
-  60%, 79.9% {  
+  60%,
+  79.9% {
     margin-top: 30%;
     margin-left: 20%;
   }
-  80%, 99.9% {  
+  80%,
+  99.9% {
     margin-top: 30%;
     margin-left: 80%;
   }
