--- a/src/nunjucks/templates/partials/header.html
+++ b/src/nunjucks/templates/partials/header.html
@@ -12,10 +12,12 @@
         <a href="https://mydonut.co/merch" title="Shop">Shop</a>
       </div>
       <div class="nav-item has-submenu">
-        <p>Our Newsletter <svg width="11" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1.594 1.485l4 4 4-4" stroke="#FFF" stroke-width="2" fill="none" fill-rule="evenodd"/></svg></p>
+        <p>Our Newsletter <svg width="11" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.594 1.485l4 4 4-4" stroke="#FFF" stroke-width="2" fill="none" fill-rule="evenodd" /></svg></p>
         <div class="outer">
           <nav class="submenu">
-            <svg class="submenu-point" width="50" height="10" xmlns="http://www.w3.org/2000/svg"><path d="M25 10H0c16.12 0 21.548-6.368 25-10v.004C28.452 3.632 33.88 10 50 10H25v-.26.26z" fill="#FFF" fill-rule="evenodd"/></svg>
+            <svg class="submenu-point" width="50" height="10" xmlns="http://www.w3.org/2000/svg">
+              <path d="M25 10H0c16.12 0 21.548-6.368 25-10v.004C28.452 3.632 33.88 10 50 10H25v-.26.26z" fill="#FFF" fill-rule="evenodd" /></svg>
             <div class="submenu-item latest">
               <a href="https://thedonut.co/latest/" title="Latest">Latest</a>
             </div>
@@ -29,10 +31,11 @@
   </div>
   <div class="header-block--cta">
     <a id="header-refer" class="btn stroke white btn-small" href="https://ambassadors.thedonut.co/refer-a-friend/">Refer a Friend</a>
-    <a id="header-subscribe" class="btn btn-small" href="javascript:void(0)">Subscribe <svg viewBox="0 0 21 16" width="21" height="16" xmlns="http://www.w3.org/2000/svg"><path d="M20.94 5.16v9.02c0 .5-.19.93-.55 1.29-.37.35-.8.53-1.32.53H1.87c-.51 0-.95-.18-1.32-.53A1.73 1.73 0 0 1 0 14.18V5.16c.34.37.74.7 1.18.99a234.11 234.11 0 0 1 6.89 4.66c.27.18.64.36 1.1.55.46.18.89.28 1.29.28h.02c.4 0 .83-.1 1.28-.28.46-.19.83-.37 1.1-.55a243.82 243.82 0 0 1 6.9-4.66c.45-.3.84-.63 1.18-1zm0-3.34c0 .6-.2 1.17-.58 1.71a5.48 5.48 0 0 1-1.42 1.4 9439.38 9439.38 0 0 0-7.2 4.84c-.24.14-.47.24-.68.31-.2.07-.4.1-.58.1h-.02a1.9 1.9 0 0 1-.59-.1 3.59 3.59 0 0 1-.67-.3 12.18 12.18 0 0 1-1.24-.8l-.5-.36a579.36 579.36 0 0 0-5.45-3.69A5.73 5.73 0 0 1 .64 3.62 2.61 2.61 0 0 1 0 2.07C0 1.47.16.98.48.59.81.2 1.27 0 1.87 0h17.2c.5 0 .94.18 1.31.53.37.36.56.79.56 1.29z" fill="#FFFCE9" fill-rule="nonzero"/></svg></a>
-    
+    <a id="header-subscribe" class="btn btn-small" href="javascript:void(0)">Subscribe <svg viewBox="0 0 21 16" width="21" height="16" xmlns="http://www.w3.org/2000/svg">
+        <path d="M20.94 5.16v9.02c0 .5-.19.93-.55 1.29-.37.35-.8.53-1.32.53H1.87c-.51 0-.95-.18-1.32-.53A1.73 1.73 0 0 1 0 14.18V5.16c.34.37.74.7 1.18.99a234.11 234.11 0 0 1 6.89 4.66c.27.18.64.36 1.1.55.46.18.89.28 1.29.28h.02c.4 0 .83-.1 1.28-.28.46-.19.83-.37 1.1-.55a243.82 243.82 0 0 1 6.9-4.66c.45-.3.84-.63 1.18-1zm0-3.34c0 .6-.2 1.17-.58 1.71a5.48 5.48 0 0 1-1.42 1.4 9439.38 9439.38 0 0 0-7.2 4.84c-.24.14-.47.24-.68.31-.2.07-.4.1-.58.1h-.02a1.9 1.9 0 0 1-.59-.1 3.59 3.59 0 0 1-.67-.3 12.18 12.18 0 0 1-1.24-.8l-.5-.36a579.36 579.36 0 0 0-5.45-3.69A5.73 5.73 0 0 1 .64 3.62 2.61 2.61 0 0 1 0 2.07C0 1.47.16.98.48.59.81.2 1.27 0 1.87 0h17.2c.5 0 .94.18 1.31.53.37.36.56.79.56 1.29z" fill="#FFFCE9" fill-rule="nonzero" /></svg></a>
+
     <div class="cta-form-wrap">
-      <form id="subForm" class="js-cm-form" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="2BE4EF332AA2E32596E38B640E905619D46C578C13DDFF6441C6635407B1C0360BB5CEF4218B8BC89D7C6A17877B09FDE6B1E1C65BFD365D419599279E726665">   
+      <form id="subForm" class="single-input-form js-cm-form" action="https://www.createsend.com/t/subscribeerror?description=" method="post" data-id="2BE4EF332AA2E32596E38B640E905619D46C578C13DDFF6441C6635407B1C0360BB5CEF4218B8BC89D7C6A17877B09FDE6B1E1C65BFD365D419599279E726665">
         <div class="form-content">
           <div class="field-wrapper">
             <!-- <label for="fieldEmail">Email</label> -->
@@ -41,9 +44,13 @@
             <input id="fieldykqhyi" name="cm-f-ykqhyi" type="hidden" /> <!-- Custom field input for capturing UTM Campaign -->
             <input id="fieldykfdjl" name="cm-f-ykfdjl" type="hidden" /> <!-- Custom field for referral URL if UTM values are null -->
           </div>
-          
+
           <div class="button-wrapper">
-            <button class="js-cm-submit-button" type="submit"><svg viewBox="0 0 20 10" width="20" height="10" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="2" fill="none" fill-rule="evenodd" stroke-linecap="round"><path d="M1.5 5h15.77M14 1l4 4-4 4"></path></g></svg></button>
+            <button class="js-cm-submit-button" type="submit"><svg viewBox="0 0 20 10" width="20" height="10" xmlns="http://www.w3.org/2000/svg">
+                <g stroke="#FFF" stroke-width="2" fill="none" fill-rule="evenodd" stroke-linecap="round">
+                  <path d="M1.5 5h15.77M14 1l4 4-4 4"></path>
+                </g>
+              </svg></button>
           </div>
         </div>
       </form>
@@ -57,19 +64,20 @@
   </div>
   <div class="mobile-nav-wrapper">
     <nav id="mobile-menu">
-      
-        <a href="/" title="Home">Home</a>     
-        <a href="https://thedonut.co/about/" title="About">About</a>
-        <a href="https://mydonut.co/merch" title="Shop">Shop</a>
-      
-        <div class="nav-item has-submenu">
-          <p>Our Newsletter <svg width="11" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1.594 1.485l4 4 4-4" stroke="#FFF" stroke-width="2" fill="none" fill-rule="evenodd"/></svg></p>
-          <nav class="submenu">
-            <a href="https://thedonut.co/latest/" title="Latest">Latest</a>
-            <a href="https://thedonut.co/archive/" title="Archive">Archive</a>
-          </nav>
-        </div>   
-        
+
+      <a href="/" title="Home">Home</a>
+      <a href="https://thedonut.co/about/" title="About">About</a>
+      <a href="https://mydonut.co/merch" title="Shop">Shop</a>
+
+      <div class="nav-item has-submenu">
+        <p>Our Newsletter <svg width="11" height="7" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.594 1.485l4 4 4-4" stroke="#FFF" stroke-width="2" fill="none" fill-rule="evenodd" /></svg></p>
+        <nav class="submenu">
+          <a href="https://thedonut.co/latest/" title="Latest">Latest</a>
+          <a href="https://thedonut.co/archive/" title="Archive">Archive</a>
+        </nav>
+      </div>
+
 
 
 
