--- a/src/scss/partials/_homepage.scss
+++ b/src/scss/partials/_homepage.scss
@@ -4,186 +4,236 @@
 
 .homepage-hero {
   background: $black;
-  padding-top: 130px;
-  padding-bottom: 115px;
-  @media screen and (max-width: $mq-max-sm) {
-    padding-top: 110px;
-    padding-bottom: 60px;
+  padding-top: 110px;
+  padding-bottom: 60px;
+
+  @include breakpoint('sm') {
+    padding-top: 130px;
+    padding-bottom: 115px;
   }
+
   .col {
     text-align: center;
   }
+
   .logo {
     max-width: 500px;
     display: block;
-    margin: 0 auto 60px;
-    @media screen and (max-width: $mq-max-sm) {
-      margin: 0 auto 30px;
+    margin: 0 auto 30px;
+
+    @include breakpoint('sm') {
+      margin: 0 auto 60px;
     }
+
     img {
-      max-width: 185px;
-      margin-bottom: 20px;
+      max-width: 148px;
+      margin-bottom: 50px;
       display: none;
-      @media screen and (max-width: $mq-max-sm) {
-        max-width: 148px;
-        margin-bottom: 50px;
+
+      @include breakpoint('sm') {
+        max-width: 185px;
+        margin-bottom: 20px;
       }
     }
-    .logo-animation {
+
+    .lottie-wrapper {
       max-width: 500px;
     }
   }
-  .text-wrapper {
-    max-width: 850px;
-    margin: auto;
+
+  .content {
     margin-bottom: 40px;
-    h1 {
-      
-      margin-bottom: 20px;
+    color: #fff;
+
+    .headline {
+      margin-bottom: 24px;
+      color: inherit;
     }
-    p {
+
+    .subtext {
       opacity: 0.6;
     }
   }
-  
-  .ctas {
+
+  .form-wrapper {
     max-width: 530px;
     margin: auto;
   }
+
+  .form-caption {
+    margin-top: 30px;
+    color: #fff;
+  }
 }
 
-
-
-
-
-
-.homepage-about-section {
+.homepage-about-plank {
   position: relative;
   z-index: 1;
-  .donut-ingredients {
-    padding: 110px 20px;
+  display: flex;
+  flex-direction: column;
+
+  @include breakpoint('lg') {
+    flex-direction: row;
+  }
+
+  .half {
+    @include breakpoint('lg') {
+      flex: 1 50%;
+    }
+  }
+
+  .ingredients {
     position: relative;
     background: #fff;
-    @media screen and (max-width: $mq-max-sm) {
-      padding: 60px 20px;
+    padding: 60px 20px;
+
+    @include breakpoint('sm') {
+      padding: 110px 20px;
     }
+
     a {
       display: block;
       text-decoration: none;
       color: inherit;
     }
+
     .inner {
       max-width: 450px;
       margin: auto;
     }
+
     h1 {
-      margin-bottom: 50px;
-      @media screen and (max-width: $mq-max-sm) {
-        max-width: 250px;
-        text-align: center;
-        margin: 0 auto 50px;
+      max-width: 250px;
+      text-align: center;
+      margin: 0 auto 50px;
+
+      @include breakpoint('sm') {
+        text-align: left;
+        margin: 0 0 50px;
+        max-width: unset;
       }
     }
+
     h4 {
       margin-top: 10px;
-      @media screen and (max-width: $mq-max-sm) {
-        text-align: center;
+      text-align: center;
+
+      @include breakpoint('sm') {
+        text-align: left;
       }
     }
+
     .ingredients-wrapper {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      @media screen and (max-width: $mq-max-sm) {
-        
-      }
+
       .ingredient {
-        flex-basis: 50%;
         display: flex;
-        align-items: flex-start;
+        flex: 1 0 50%;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
         margin-bottom: 50px;
-        @media screen and (max-width: $mq-max-sm) {
-          flex-direction: column;
-          align-items: center;
-          text-align: center;
-          justify-content: flex-start!important;
+
+        @include breakpoint('sm') {
+          flex-direction: row;
+          align-items: flex-start;
+          text-align: left;
         }
+
         &:nth-child(even) {
-          justify-content: flex-end;
-        }
-        img {
-          margin-right: 15px;
-          @media screen and (max-width: $mq-max-sm) {
-            margin-right: 0;
-            margin-bottom: 10px;
+          @include breakpoint('sm') {
+            justify-content: flex-end;
           }
         }
+
+        .icon {
+          margin-right: 0;
+          margin-bottom: 10px;
+          width: 48px;
+
+          @include breakpoint('sm') {
+            margin-right: 15px;
+            margin-bottom: 0;
+          }
+        }
+
         p {
-          font-size: 18px;
           max-width: 140px;
         }
       }
     }
-    .ingredient {
-      img {
-        width: 48px;
-      }
-    }
-    
   }
-  .donut-mockup {
-    background-image: url('http://localhost:3000/images/donut-newsletter-mockup-oct-2019.jpg');
+
+  .mockup {
+    background-image: url('/images/hero-img-3.jpg');
     background-size: cover;
     background-position: center center;
-    box-shadow: 0 22px 50px rgba($yellow, 0.4);
-    @media screen and (max-width: $mq-max-lg) {
-      flex: auto;
-      height: 420px;
-    }
-  }
-}
+    box-shadow: 0 22px 50px rgba($dough, 0.4);
+    height: 420px;
 
-section.flex {
-  display: flex;
-  @media screen and (max-width: $mq-max-lg) {
-    flex-direction: column;
-  }
-  & > div {
-    flex: 1 50%;
+    @include breakpoint('lg') {
+      height: auto;
+    }
   }
 }
 
 .homepage-quote-section {
+  display: flex;
+  flex-direction: column;
+
+  @include breakpoint('lg') {
+    flex-direction: row;
+  }
+
+  .half {
+    @include breakpoint('lg') {
+      flex: 1 50%;
+    }
+  }
+
   .quotes {
-    background: linear-gradient( 45deg, rgba($green, .95), rgba(tint($green, 50%), .95)), url('http://localhost:3000/images/sprinkle-texture-light.jpg');
+    background: linear-gradient(
+        45deg,
+        rgba($green, 0.95),
+        rgba(tint($green, 50%), 0.95)
+      ),
+      url('http://localhost:3000/images/sprinkle-texture-light.jpg');
     position: relative;
     z-index: 1;
     overflow: hidden;
+
     .quote-carousel {
-      padding: 160px 0;
-      @media screen and (max-width: $mq-max-sm) {
-        padding: 100px 0 145px;
+      padding: 100px 0 145px;
+
+      @include breakpoint('sm') {
+        padding: 160px 0;
       }
     }
+
     .quote-wrapper {
       position: relative;
       margin: 0 30px;
+
       .quote-box {
         background: #fff;
         max-width: 540px;
         min-height: 300px;
         border-radius: 10px;
-        box-shadow: 0 22px 24px rgba(#3C3D5D, .23);
+        box-shadow: 0 22px 24px rgba(#3c3d5d, 0.23);
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        padding: 50px 40px 40px;
         margin: auto;
-        @media screen and (max-width: $mq-max-sm) {
-          padding: 50px 25px 40px;
+        padding: 50px 25px 40px;
+
+        @include breakpoint('sm') {
+          padding: 50px 40px 40px;
         }
       }
+
       .quote {
         font-style: italic;
         text-align: center;
@@ -192,6 +242,7 @@ section.flex {
         line-height: 28px;
         opacity: 0.6;
       }
+
       .attribution {
         text-align: center;
         font-size: 13px;
@@ -200,24 +251,27 @@ section.flex {
         font-weight: 700;
         letter-spacing: 1px;
       }
-  
     }
+
     .quote-marks {
-      @include size(76px);
+      @include size(60px);
       background: #fff;
       border-radius: 50%;
-      box-shadow: 0 12px 14px rgba(#3C3D5D, .23);
+      box-shadow: 0 12px 14px rgba(#3c3d5d, 0.23);
       position: absolute;
       left: 50%;
       top: 0;
       transform: translate(-50%, -50%);
-      @media screen and (max-width: $mq-max-sm) {
-        @include size(60px);
+
+      @include breakpoint('sm') {
+        @include size(76px);
       }
+
       img {
         width: 100%;
       }
     }
+
     .quote-pagination {
       text-align: center;
       position: absolute;
@@ -225,11 +279,13 @@ section.flex {
       -webkit-transform: translateX(-50%);
       transform: translateX(-50%);
       font-size: 0;
-      bottom: 120px;
+      bottom: 100px;
       width: 100%;
-      @media screen and (max-width: $mq-max-sm) {
-        bottom: 100px;
+
+      @include breakpoint('sm') {
+        bottom: 120px;
       }
+
       button {
         width: 37px;
         height: 10px;
@@ -238,38 +294,46 @@ section.flex {
         background: #fff;
         -webkit-appearance: none;
         border: none;
+        cursor: pointer;
+
         &.active {
-          background: $periwinkle
+          background: $periwinkle;
         }
       }
     }
   }
+
   .tagline-spinner {
     background: $cream;
     position: relative;
-    overflow:hidden;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    @media screen and (max-width: $mq-max-lg) {
-      flex: auto;
-      padding: 50px 15px;
+    padding: 50px 15px;
+
+    @include breakpoint('lg') {
+      padding: 0;
     }
+
     .tagline-spinner-middle-band {
       position: absolute;
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
     }
+
     .tagline-spinner--shell {
-      @include size(410px);
+      @include size(280px);
       background: $black;
       border-radius: 50%;
       position: relative;
-      @media screen and (max-width: $mq-max-sm) {
-        @include size(280px);
+
+      @include breakpoint('sm') {
+        @include size(410px);
       }
     }
+
     #tagline-spinner-outer,
     #tagline-spinner-inner,
     #tagline-spinner-donut {
@@ -277,12 +341,14 @@ section.flex {
       height: 100%;
       position: absolute;
     }
+
     .tagline-spinner-middle-band {
       @include size(64%);
       border-radius: 50%;
-      border: 4px solid $yellow;
-      @media screen and (max-width: $mq-max-sm) {
-        border-width: 3px;
+      border: 3px solid $schoolbus;
+
+      @include breakpoint('sm') {
+        border-width: 4px;
       }
     }
   }
