--- a/src/scss/partials/components/_sprinkle-hero.scss
+++ b/src/scss/partials/components/_sprinkle-hero.scss
@@ -6,23 +6,28 @@
   text-align: center;
   position: relative;
   padding-bottom: 110px;
-  @media screen and (max-width: $mq-max-xl) {
+  @include breakpoint('xl') {
     padding-top: 150px;
     padding-bottom: 100px;
   }
-  @media screen and (max-width: $mq-max-lg) {
+  @include breakpoint('lg') {
     padding-top: 140px;
     padding-bottom: 90px;
   }
-  @media screen and (max-width: $mq-max-md) {
+  @include breakpoint('md') {
     padding-top: 130px;
     padding-bottom: 75px;
   }
-  @media screen and (max-width: $mq-max-sm) {
+  @include breakpoint('sm') {
     padding-top: 120px;
     padding-bottom: 60px;
   }
   &.periwinkle {
-    background: linear-gradient( 45deg, rgba($periwinkle, .95), rgba($periwinkle, .95)), url('http://localhost:3000/images/sprinkle-texture-dark.jpg');
+    background: linear-gradient(
+        45deg,
+        rgba($periwinkle, 0.95),
+        rgba($periwinkle, 0.95)
+      ),
+      url('http://localhost:3000/images/sprinkle-texture-dark.jpg');
   }
 }
