--- a/src/scss/partials/globals/_single-input-form.scss
+++ b/src/scss/partials/globals/_single-input-form.scss
@@ -2,38 +2,46 @@
  Campaign Monitor Forms
 **********************************************/
 
-.js-cm-form {
+.single-input-form {
   &.with-shadow {
     .form-content {
       border-radius: 4px;
-      box-shadow: 0 12px 24px rgba(#3E4075, 0.5);
-      @media screen and (max-width: $mq-max-sm) {
+
+      @include breakpoint('sm') {
+        box-shadow: 0 12px 24px rgba(#3e4075, 0.5);
+      }
+    }
+
+    .input .button {
+      box-shadow: 0 12px 24px rgba(#3e4075, 0.5);
+
+      @include breakpoint('sm') {
         box-shadow: unset;
       }
     }
-    .input
-    .button {
-      @media screen and (max-width: $mq-max-sm) {
-        box-shadow: 0 12px 24px rgba(#3E4075, 0.5);
-      }
-    }
   }
+
   .form-content {
     display: flex;
-    @media screen and (max-width: $mq-max-sm) {
-      flex-direction: column;
+    flex-direction: column;
+
+    @include breakpoint('sm') {
+      flex-direction: row;
     }
   }
+
   .field-wrapper {
     position: relative;
+
     ._error {
-      background: $yellow;
+      background: $schoolbus;
       border-radius: 4px;
       padding: 15px 20px;
       position: absolute;
       right: 0;
       bottom: -110%;
     }
+
     ._error-arrow {
       width: 0;
       height: 0;
@@ -43,67 +51,72 @@
       z-index: 0;
       left: 20px;
       background: transparent;
-      border-top: 8px solid $yellow;
+      border-top: 8px solid $schoolbus;
       border-right: 8px solid transparent;
       border-bottom: 8px solid transparent;
-      border-left: 8px solid $yellow;
+      border-left: 8px solid $schoolbus;
     }
   }
+
   input {
     width: 100%;
     font-size: 18px;
     font-family: $body-font;
     line-height: 30px;
-    border-radius: 0;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
     border: none;
+    border-radius: 4px;
     outline: none;
     margin: 0;
     padding: 15px 20px;
+
+    @include breakpoint(sm) {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
   }
-  
+
   button {
     font-family: $body-font;
     font-weight: 700;
     font-size: 16px;
     line-height: 30px;
-    border-radius: 0;
+    border-radius: 4px;
     border: none;
     color: #fff;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
     background: $primary-btn-color;
     transition: $btn-timing-function;
     margin: 0;
-    padding: 15px 20px;
+    padding: 15px 40px;
     outline: none;
     cursor: pointer;
-    @media screen and (max-width: $mq-max-sm) {
-      position: relative;
-      width: 100%;
+    position: relative;
+    width: 100%;
+
+    @include breakpoint('sm') {
+      width: initial;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
     }
+
     &:hover {
       background: $primary-btn-color-hover;
     }
+
     &.black {
       background: $black;
+
       &:hover {
         background: tint($black, 10%);
       }
     }
   }
+
   .field-wrapper {
-    margin: 0;
     flex: 1;
-    @media screen and (max-width: $mq-max-sm) {
-      margin-bottom: 15px;
-    }
-  }
-  input,
-  button {
-    @media screen and (max-width: $mq-max-sm) {
-      border-radius: 4px;
+    margin-bottom: 15px;
+
+    @include breakpoint('sm') {
+      margin-bottom: 0;
     }
   }
 }
